--- a/package.json
+++ b/package.json
@@ -5,23 +5,34 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fluentui/react": "^8.118.6",
+    "@fluentui/react-card": "^9.0.81",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@nextui-org/react": "^2.4.1",
+    "@react-pdf/renderer": "^3.4.4",
     "@stripe/react-stripe-js": "^2.7.1",
+    "@tabler/icons-react": "^3.5.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.13",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.2",
+    "chart.js": "^4.4.3",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.8.0",
-    "framer-motion": "^11.0.28",
+    "framer-motion": "^11.2.10",
+    "herotofu-react": "^1.0.6",
     "lucide-react": "^0.368.0",
     "mui-datatables": "^4.3.0",
     "qr-scanner": "^1.4.2",
@@ -29,14 +40,20 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-responsive-masonry": "^2.2.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
     "react-use-cart": "^1.13.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-classnames": "^3.1.0",
+    "twin.macro": "^3.4.1",
     "use-history": "^1.4.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
@@ -71,6 +88,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "prettier": "3.2.5",
     "tailwindcss": "^3.4.3"
   }
